<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_main"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_waffarly_alert"
            android:icon="@drawable/ic_nav_alert"
            android:title="@string/waffarly_alert" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_nav_account"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_consumption_past"
            android:icon="@drawable/ic_nav_past"
            android:title="@string/consumption_past" />
        <item
            android:id="@+id/nav_consumption_now"
            android:icon="@drawable/ic_nav_now"
            android:title="@string/consumption_now" />
        <item
            android:id="@+id/nav_advice"
            android:icon="@drawable/ic_nav_advice"
            android:title="@string/advice_for_consumption" />
        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/ic_nav_ads"
            android:title="@string/ads" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/logout" />
    </group>

</menu>
